--- a/OnlineJudge/requirements.txt
+++ b/OnlineJudge/requirements.txt
@@ -1,1 +1,15 @@
-Django>=4.0
+# Django core
+Django>=4.2,<5.0
+
+# Google Generative AI SDK
+google-generativeai>=0.5.0
+
+# Markdown rendering in Django views or templates
+markdown>=3.4
+markdownify>=0.11.6
+
+# Python dotenv for loading .env
+python-dotenv>=1.0.1
+
+# Gunicorn for production server (if using Docker deployment)
+gunicorn>=21.2.0
